# LRI_signalControl

./: .gitignore  LRIagent.py  README.md  UserModel.py  app.py  export.py  pyproject.toml  requirements.txt  streamlit_app.py
article/: article.aux  article.bbl  article.dvi  article.fdb_latexmk  article.fls  article.out  article.run.xml  article.tex  article.xdv  references.bib
article/figures/: article.tex
article/src/: conclusion.tex  extension.tex  introduction.tex
model/: lri_model.pkl  system_state.json
notebook/: LRI.ipynb  evaluate.py
templates/: feedback_result.html  index.html
